--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,25 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+ul {
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.main-container {
+  margin: 4rem 12rem;
+  height: 80vh;
+
+  .upper-main-container {
+    margin-top: 2.4rem;
+    display: grid;
+    grid-template-columns: 2.4fr 1fr;
+    gap: 4rem;
+  }
 }
