desktop view completed.

--- a/src/components/mainSection/mainSection.scss
+++ b/src/components/mainSection/mainSection.scss
@@ -23,6 +23,7 @@ $VeryDarkBlue: hsl(240, 100%, 5%);
       font-size: 3rem;
       font-weight: 800;
       line-height: 3rem;
+      color: $VeryDarkBlue;
     }
   }
 
