--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+$OffWhite: hsl(36, 100%, 99%);
 body,
 p,
 h1,
@@ -13,6 +14,10 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  background-color: $OffWhite;
 }
 
 .main-container {
